[project]
name = "molab-cfo-demo"
version = "0.1.0"
description = "CFO: Continuous Vector Fields from Sparse Lorenz Data, with Parametric Family Learning"
requires-python = ">=3.11"
dependencies = [
    "marimo>=0.10.0",
    "torch>=2.2.0",
    "numpy>=1.26.0",
    "matplotlib>=3.8.0",
    "scipy>=1.11.0",
    "plotly>=5.20.0",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" }
]

